--- a/DataFormats/Common/test/CMakeLists.txt
+++ b/DataFormats/Common/test/CMakeLists.txt
@@ -22,8 +22,11 @@ add_executable(testDataFormatsCommon
 )
 
 target_include_directories(testDataFormatsCommon PUBLIC ${CPPUNIT_INCLUDE_DIR})
+include_directories(testDataFormatsCommon PUBLIC ${CPPUNIT_INCLUDE_DIR})
 target_include_directories(testDataFormatsCommon PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(testDataFormatsCommon PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(testDataFormatsCommon PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(testDataFormatsCommon PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(testDataFormatsCommon PUBLIC
   ${Boost_REGEX_LIBRARY_RELEASE}
   dl
@@ -39,14 +42,15 @@ target_link_libraries(testDataFormatsCommon PUBLIC
   ${PYTHON_LIBRARY}
 )
 
-install( TARGETS testDataFormatsCommon EXPORT testDataFormatsCommon DESTINATION  bin )
-
+add_test(NAME testDataFormatsCommon COMMAND testDataFormatsCommon)
 add_executable(DetSetVector_t
   DetSetVector_t.cpp
 )
 
 target_include_directories(DetSetVector_t PUBLIC ${CPPUNIT_INCLUDE_DIR})
+include_directories(DetSetVector_t PUBLIC ${CPPUNIT_INCLUDE_DIR})
 target_include_directories(DetSetVector_t PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(DetSetVector_t PUBLIC ${Boost_INCLUDE_DIR})
 target_link_libraries(DetSetVector_t PUBLIC
   ${Boost_REGEX_LIBRARY_RELEASE}
   dl
@@ -62,15 +66,17 @@ target_link_libraries(DetSetVector_t PUBLIC
   ${PYTHON_LIBRARY}
 )
 
-install( TARGETS DetSetVector_t EXPORT DetSetVector_t DESTINATION  bin )
-
+add_test(NAME DetSetVector_t COMMAND DetSetVector_t)
 add_executable(OwnVector_t
   OwnVector_t.cpp
 )
 
 target_include_directories(OwnVector_t PUBLIC ${CPPUNIT_INCLUDE_DIR})
+include_directories(OwnVector_t PUBLIC ${CPPUNIT_INCLUDE_DIR})
 target_include_directories(OwnVector_t PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(OwnVector_t PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(OwnVector_t PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(OwnVector_t PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(OwnVector_t PUBLIC
   ${Boost_REGEX_LIBRARY_RELEASE}
   dl
@@ -86,22 +92,23 @@ target_link_libraries(OwnVector_t PUBLIC
   ${PYTHON_LIBRARY}
 )
 
-install( TARGETS OwnVector_t EXPORT OwnVector_t DESTINATION  bin )
-
+add_test(NAME OwnVector_t COMMAND OwnVector_t)
 add_executable(DictionaryTools_t
   DictionaryTools_t.cpp
 )
 
 target_include_directories(DictionaryTools_t PUBLIC ${CPPUNIT_INCLUDE_DIR})
+include_directories(DictionaryTools_t PUBLIC ${CPPUNIT_INCLUDE_DIR})
 target_include_directories(DictionaryTools_t PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(DictionaryTools_t PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(DictionaryTools_t PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(DictionaryTools_t PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(DictionaryTools_t PUBLIC
   ${Boost_REGEX_LIBRARY_RELEASE}
   dl
   ${Boost_IOSTREAMS_LIBRARY_RELEASE}
   ${Boost_SERIALIZATION_LIBRARY_RELEASE}
   DataFormatsCommon
-  ${PYTHON_LIBRARY}
   ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
   ${Boost_PYTHON_LIBRARY_RELEASE}
   ${Boost_THREAD_LIBRARY_RELEASE}
@@ -110,17 +117,20 @@ target_link_libraries(DictionaryTools_t PUBLIC
   DataFormatsStdDictionaries
   ${Boost_FILESYSTEM_LIBRARY_RELEASE}
   DataFormatsWrappedStdDictionaries
+  ${PYTHON_LIBRARY}
 )
 
-install( TARGETS DictionaryTools_t EXPORT DictionaryTools_t DESTINATION  bin )
-
+add_test(NAME DictionaryTools_t COMMAND DictionaryTools_t)
 add_executable(Wrapper_t
   Wrapper_t.cpp
 )
 
 target_include_directories(Wrapper_t PUBLIC ${CPPUNIT_INCLUDE_DIR})
+include_directories(Wrapper_t PUBLIC ${CPPUNIT_INCLUDE_DIR})
 target_include_directories(Wrapper_t PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(Wrapper_t PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(Wrapper_t PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(Wrapper_t PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(Wrapper_t PUBLIC
   ${Boost_REGEX_LIBRARY_RELEASE}
   dl
@@ -136,15 +146,17 @@ target_link_libraries(Wrapper_t PUBLIC
   ${PYTHON_LIBRARY}
 )
 
-install( TARGETS Wrapper_t EXPORT Wrapper_t DESTINATION  bin )
-
+add_test(NAME Wrapper_t COMMAND Wrapper_t)
 add_executable(traits_t
   traits_t.cpp
 )
 
 target_include_directories(traits_t PUBLIC ${CPPUNIT_INCLUDE_DIR})
+include_directories(traits_t PUBLIC ${CPPUNIT_INCLUDE_DIR})
 target_include_directories(traits_t PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(traits_t PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(traits_t PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(traits_t PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(traits_t PUBLIC
   ${Boost_REGEX_LIBRARY_RELEASE}
   dl
@@ -160,15 +172,17 @@ target_link_libraries(traits_t PUBLIC
   ${PYTHON_LIBRARY}
 )
 
-install( TARGETS traits_t EXPORT traits_t DESTINATION  bin )
-
+add_test(NAME traits_t COMMAND traits_t)
 add_executable(RefCore_t
   RefCore_t.cpp
 )
 
 target_include_directories(RefCore_t PUBLIC ${CPPUNIT_INCLUDE_DIR})
+include_directories(RefCore_t PUBLIC ${CPPUNIT_INCLUDE_DIR})
 target_include_directories(RefCore_t PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(RefCore_t PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(RefCore_t PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(RefCore_t PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(RefCore_t PUBLIC
   ${Boost_REGEX_LIBRARY_RELEASE}
   dl
@@ -184,15 +198,17 @@ target_link_libraries(RefCore_t PUBLIC
   ${PYTHON_LIBRARY}
 )
 
-install( TARGETS RefCore_t EXPORT RefCore_t DESTINATION  bin )
-
+add_test(NAME RefCore_t COMMAND RefCore_t)
 add_executable(Ref_t
   Ref_t.cpp
 )
 
 target_include_directories(Ref_t PUBLIC ${CPPUNIT_INCLUDE_DIR})
+include_directories(Ref_t PUBLIC ${CPPUNIT_INCLUDE_DIR})
 target_include_directories(Ref_t PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(Ref_t PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(Ref_t PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(Ref_t PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(Ref_t PUBLIC
   ${Boost_REGEX_LIBRARY_RELEASE}
   dl
@@ -208,15 +224,17 @@ target_link_libraries(Ref_t PUBLIC
   ${PYTHON_LIBRARY}
 )
 
-install( TARGETS Ref_t EXPORT Ref_t DESTINATION  bin )
-
+add_test(NAME Ref_t COMMAND Ref_t)
 add_executable(RefVector_t
   RefVector_t.cpp
 )
 
 target_include_directories(RefVector_t PUBLIC ${CPPUNIT_INCLUDE_DIR})
+include_directories(RefVector_t PUBLIC ${CPPUNIT_INCLUDE_DIR})
 target_include_directories(RefVector_t PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(RefVector_t PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(RefVector_t PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(RefVector_t PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(RefVector_t PUBLIC
   ${Boost_REGEX_LIBRARY_RELEASE}
   dl
@@ -232,15 +250,17 @@ target_link_libraries(RefVector_t PUBLIC
   ${PYTHON_LIBRARY}
 )
 
-install( TARGETS RefVector_t EXPORT RefVector_t DESTINATION  bin )
-
+add_test(NAME RefVector_t COMMAND RefVector_t)
 add_executable(DataFrame_t
   DataFrame_t.cpp
 )
 
 target_include_directories(DataFrame_t PUBLIC ${CPPUNIT_INCLUDE_DIR})
+include_directories(DataFrame_t PUBLIC ${CPPUNIT_INCLUDE_DIR})
 target_include_directories(DataFrame_t PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(DataFrame_t PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(DataFrame_t PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(DataFrame_t PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(DataFrame_t PUBLIC
   ${Boost_REGEX_LIBRARY_RELEASE}
   dl
@@ -256,15 +276,17 @@ target_link_libraries(DataFrame_t PUBLIC
   ${PYTHON_LIBRARY}
 )
 
-install( TARGETS DataFrame_t EXPORT DataFrame_t DESTINATION  bin )
-
+add_test(NAME DataFrame_t COMMAND DataFrame_t)
 add_executable(DetSetNew_t
   DetSetNew_t.cpp
 )
 
 target_include_directories(DetSetNew_t PUBLIC ${CPPUNIT_INCLUDE_DIR})
+include_directories(DetSetNew_t PUBLIC ${CPPUNIT_INCLUDE_DIR})
 target_include_directories(DetSetNew_t PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(DetSetNew_t PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(DetSetNew_t PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(DetSetNew_t PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(DetSetNew_t PUBLIC
   ${Boost_REGEX_LIBRARY_RELEASE}
   dl
@@ -280,15 +302,17 @@ target_link_libraries(DetSetNew_t PUBLIC
   ${PYTHON_LIBRARY}
 )
 
-install( TARGETS DetSetNew_t EXPORT DetSetNew_t DESTINATION  bin )
-
+add_test(NAME DetSetNew_t COMMAND DetSetNew_t)
 add_executable(DetSetNewTS_t
   DetSetNewTS_t.cpp
 )
 
 target_include_directories(DetSetNewTS_t PUBLIC ${CPPUNIT_INCLUDE_DIR})
+include_directories(DetSetNewTS_t PUBLIC ${CPPUNIT_INCLUDE_DIR})
 target_include_directories(DetSetNewTS_t PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(DetSetNewTS_t PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(DetSetNewTS_t PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(DetSetNewTS_t PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(DetSetNewTS_t PUBLIC
   ${Boost_REGEX_LIBRARY_RELEASE}
   dl
@@ -304,15 +328,17 @@ target_link_libraries(DetSetNewTS_t PUBLIC
   ${PYTHON_LIBRARY}
 )
 
-install( TARGETS DetSetNewTS_t EXPORT DetSetNewTS_t DESTINATION  bin )
-
+add_test(NAME DetSetNewTS_t COMMAND DetSetNewTS_t)
 add_executable(MapOfVectors_t
   MapOfVectors_t.cpp
 )
 
 target_include_directories(MapOfVectors_t PUBLIC ${CPPUNIT_INCLUDE_DIR})
+include_directories(MapOfVectors_t PUBLIC ${CPPUNIT_INCLUDE_DIR})
 target_include_directories(MapOfVectors_t PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(MapOfVectors_t PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(MapOfVectors_t PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(MapOfVectors_t PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(MapOfVectors_t PUBLIC
   ${Boost_REGEX_LIBRARY_RELEASE}
   dl
@@ -328,15 +354,17 @@ target_link_libraries(MapOfVectors_t PUBLIC
   ${PYTHON_LIBRARY}
 )
 
-install( TARGETS MapOfVectors_t EXPORT MapOfVectors_t DESTINATION  bin )
-
+add_test(NAME MapOfVectors_t COMMAND MapOfVectors_t)
 add_executable(exDSTV
   exDSTV.cpp
 )
 
 target_include_directories(exDSTV PUBLIC ${CPPUNIT_INCLUDE_DIR})
+include_directories(exDSTV PUBLIC ${CPPUNIT_INCLUDE_DIR})
 target_include_directories(exDSTV PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(exDSTV PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(exDSTV PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(exDSTV PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(exDSTV PUBLIC
   ${Boost_REGEX_LIBRARY_RELEASE}
   dl
@@ -352,15 +380,17 @@ target_link_libraries(exDSTV PUBLIC
   ${PYTHON_LIBRARY}
 )
 
-install( TARGETS exDSTV EXPORT exDSTV DESTINATION  bin )
-
+add_test(NAME exDSTV COMMAND exDSTV)
 add_executable(Trie_t
   Trie_t.cpp
 )
 
 target_include_directories(Trie_t PUBLIC ${CPPUNIT_INCLUDE_DIR})
+include_directories(Trie_t PUBLIC ${CPPUNIT_INCLUDE_DIR})
 target_include_directories(Trie_t PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(Trie_t PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(Trie_t PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(Trie_t PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(Trie_t PUBLIC
   ${Boost_REGEX_LIBRARY_RELEASE}
   dl
@@ -376,15 +406,17 @@ target_link_libraries(Trie_t PUBLIC
   ${PYTHON_LIBRARY}
 )
 
-install( TARGETS Trie_t EXPORT Trie_t DESTINATION  bin )
-
+add_test(NAME Trie_t COMMAND Trie_t)
 add_executable(exTrie
   exTrie.cpp
 )
 
 target_include_directories(exTrie PUBLIC ${CPPUNIT_INCLUDE_DIR})
+include_directories(exTrie PUBLIC ${CPPUNIT_INCLUDE_DIR})
 target_include_directories(exTrie PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(exTrie PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(exTrie PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(exTrie PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(exTrie PUBLIC
   ${Boost_REGEX_LIBRARY_RELEASE}
   dl
@@ -400,15 +432,17 @@ target_link_libraries(exTrie PUBLIC
   ${PYTHON_LIBRARY}
 )
 
-install( TARGETS exTrie EXPORT exTrie DESTINATION  bin )
-
+add_test(NAME exTrie COMMAND exTrie)
 add_executable(testBoostRange
   testBoostRange.cpp
 )
 
 target_include_directories(testBoostRange PUBLIC ${CPPUNIT_INCLUDE_DIR})
+include_directories(testBoostRange PUBLIC ${CPPUNIT_INCLUDE_DIR})
 target_include_directories(testBoostRange PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(testBoostRange PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(testBoostRange PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(testBoostRange PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(testBoostRange PUBLIC
   ${Boost_REGEX_LIBRARY_RELEASE}
   dl
@@ -424,16 +458,18 @@ target_link_libraries(testBoostRange PUBLIC
   ${PYTHON_LIBRARY}
 )
 
-install( TARGETS testBoostRange EXPORT testBoostRange DESTINATION  bin )
-
+add_test(NAME testBoostRange COMMAND testBoostRange)
 add_executable(testMultiAssociation
   testRunner.cpp
   testMultiAssociation.cc
 )
 
 target_include_directories(testMultiAssociation PUBLIC ${CPPUNIT_INCLUDE_DIR})
+include_directories(testMultiAssociation PUBLIC ${CPPUNIT_INCLUDE_DIR})
 target_include_directories(testMultiAssociation PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(testMultiAssociation PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(testMultiAssociation PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(testMultiAssociation PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(testMultiAssociation PUBLIC
   ${Boost_REGEX_LIBRARY_RELEASE}
   dl
@@ -449,5 +485,4 @@ target_link_libraries(testMultiAssociation PUBLIC
   ${PYTHON_LIBRARY}
 )
 
-install( TARGETS testMultiAssociation EXPORT testMultiAssociation DESTINATION  bin )
-
+add_test(NAME testMultiAssociation COMMAND testMultiAssociation)
