--- a/DataFormats/FEDRawData/test/CMakeLists.txt
+++ b/DataFormats/FEDRawData/test/CMakeLists.txt
@@ -4,13 +4,13 @@ add_executable(testFEDRawData
 )
 
 target_include_directories(testFEDRawData PUBLIC ${CPPUNIT_INCLUDE_DIR})
+include_directories(testFEDRawData PUBLIC ${CPPUNIT_INCLUDE_DIR})
 target_link_libraries(testFEDRawData PUBLIC
   ${CPPUNIT_LIBRARY}
   DataFormatsFEDRawData
 )
 
-install( TARGETS testFEDRawData EXPORT testFEDRawData DESTINATION  bin )
-
+add_test(NAME testFEDRawData COMMAND testFEDRawData)
 add_library(testDumpFEDRawDataProduct SHARED 
   DumpFEDRawDataProduct.cc
 )
@@ -19,6 +19,4 @@ target_link_libraries(testDumpFEDRawDataProduct PUBLIC
   FWCoreFramework
   DataFormatsFEDRawData
 )
-
-install( TARGETS testDumpFEDRawDataProduct EXPORT testDumpFEDRawDataProduct DESTINATION  lib )
 
