--- a/DataFormats/Provenance/test/CMakeLists.txt
+++ b/DataFormats/Provenance/test/CMakeLists.txt
@@ -14,54 +14,60 @@ add_executable(testDataFormatsProvenance
 )
 
 target_include_directories(testDataFormatsProvenance PUBLIC ${CPPUNIT_INCLUDE_DIR})
+include_directories(testDataFormatsProvenance PUBLIC ${CPPUNIT_INCLUDE_DIR})
 target_link_libraries(testDataFormatsProvenance PUBLIC
   ${CPPUNIT_LIBRARY}
   DataFormatsProvenance
 )
 
-install( TARGETS testDataFormatsProvenance EXPORT testDataFormatsProvenance DESTINATION  bin )
-
+add_test(NAME testDataFormatsProvenance COMMAND testDataFormatsProvenance)
 add_executable(EntryDescription_t
   EntryDescription_t.cpp
 )
 
 target_include_directories(EntryDescription_t PUBLIC ${CPPUNIT_INCLUDE_DIR})
+include_directories(EntryDescription_t PUBLIC ${CPPUNIT_INCLUDE_DIR})
 target_include_directories(EntryDescription_t PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(EntryDescription_t PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(EntryDescription_t PUBLIC ${TBB_INCLUDE_DIRS})
+include_directories(EntryDescription_t PUBLIC ${TBB_INCLUDE_DIRS})
 target_include_directories(EntryDescription_t PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(EntryDescription_t PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(EntryDescription_t PUBLIC
   ${CPPUNIT_LIBRARY}
   DataFormatsProvenance
 )
 
-install( TARGETS EntryDescription_t EXPORT EntryDescription_t DESTINATION  bin )
-
+add_test(NAME EntryDescription_t COMMAND EntryDescription_t)
 add_executable(testProductResolverIndexHelper
   testRunner.cpp
   productResolverIndexHelper_t.cppunit.cc
 )
 
 target_include_directories(testProductResolverIndexHelper PUBLIC ${CPPUNIT_INCLUDE_DIR})
+include_directories(testProductResolverIndexHelper PUBLIC ${CPPUNIT_INCLUDE_DIR})
 target_include_directories(testProductResolverIndexHelper PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(testProductResolverIndexHelper PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(testProductResolverIndexHelper PUBLIC ${TBB_INCLUDE_DIRS})
+include_directories(testProductResolverIndexHelper PUBLIC ${TBB_INCLUDE_DIRS})
 target_include_directories(testProductResolverIndexHelper PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(testProductResolverIndexHelper PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(testProductResolverIndexHelper PUBLIC
   ${CPPUNIT_LIBRARY}
   DataFormatsProvenance
   DataFormatsTestObjects
 )
 
-install( TARGETS testProductResolverIndexHelper EXPORT testProductResolverIndexHelper DESTINATION  bin )
-
+add_test(NAME testProductResolverIndexHelper COMMAND testProductResolverIndexHelper)
 add_executable(productResolverIndexHelperTest
   productResolverIndexHelperTest.cc
 )
 
 target_include_directories(productResolverIndexHelperTest PUBLIC ${CPPUNIT_INCLUDE_DIR})
+include_directories(productResolverIndexHelperTest PUBLIC ${CPPUNIT_INCLUDE_DIR})
 target_link_libraries(productResolverIndexHelperTest PUBLIC
   ${CPPUNIT_LIBRARY}
   DataFormatsProvenance
 )
 
-install( TARGETS productResolverIndexHelperTest EXPORT productResolverIndexHelperTest DESTINATION  bin )
-
+add_test(NAME productResolverIndexHelperTest COMMAND productResolverIndexHelperTest)
