--- a/DataFormats/TestObjects/CMakeLists.txt
+++ b/DataFormats/TestObjects/CMakeLists.txt
@@ -1,3 +1,5 @@
+include_directories(${CMAKE_SOURCE_DIR})
+include_directories(/usr/include/)
 if(BUILDTEST)
 add_subdirectory(test)
 endif()
@@ -13,7 +15,9 @@ add_library(DataFormatsTestObjects SHARED
 
 add_dependencies(DataFormatsTestObjects DataFormatsTestObjectsDict)
 target_include_directories(DataFormatsTestObjects PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(DataFormatsTestObjects PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(DataFormatsTestObjects PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(DataFormatsTestObjects PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(DataFormatsTestObjects PUBLIC
   DataFormatsCommon
 )
