--- a/FWCore/Catalog/CMakeLists.txt
+++ b/FWCore/Catalog/CMakeLists.txt
@@ -1,3 +1,5 @@
+include_directories(${CMAKE_SOURCE_DIR})
+include_directories(/usr/include/)
 if(BUILDTEST)
 add_subdirectory(test)
 endif()
@@ -7,22 +9,24 @@ add_library(FWCoreCatalog SHARED
 )
 
 target_include_directories(FWCoreCatalog PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(FWCoreCatalog PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(FWCoreCatalog PUBLIC ${TBB_INCLUDE_DIRS})
+include_directories(FWCoreCatalog PUBLIC ${TBB_INCLUDE_DIRS})
 target_link_libraries(FWCoreCatalog PUBLIC
   ${Boost_REGEX_LIBRARY_RELEASE}
   dl
   ${Boost_IOSTREAMS_LIBRARY_RELEASE}
   ${Boost_SERIALIZATION_LIBRARY_RELEASE}
-  ${PYTHON_LIBRARY}
+  FWCoreUtilities
   xerces-c
   ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
-  FWCoreUtilities
+  ${Boost_PYTHON_LIBRARY_RELEASE}
   ${Boost_THREAD_LIBRARY_RELEASE}
   ${Boost_SYSTEM_LIBRARY_RELEASE}
   FWCoreServiceRegistry
   ${Boost_FILESYSTEM_LIBRARY_RELEASE}
   FWCoreConcurrency
-  ${Boost_PYTHON_LIBRARY_RELEASE}
+  ${PYTHON_LIBRARY}
 )
 
 install( TARGETS FWCoreCatalog EXPORT FWCoreCatalog DESTINATION  lib )
