--- a/FWCore/Common/CMakeLists.txt
+++ b/FWCore/Common/CMakeLists.txt
@@ -1,3 +1,5 @@
+include_directories(${CMAKE_SOURCE_DIR})
+include_directories(/usr/include/)
 reflex_dictionary(FWCoreCommon src/classes.h src/classes_def.xml)
 add_library(FWCoreCommon SHARED 
   src/TriggerNames.cc
