--- a/FWCore/Framework/bin/CMakeLists.txt
+++ b/FWCore/Framework/bin/CMakeLists.txt
@@ -3,18 +3,25 @@ add_executable(cmsRunGlibC
 )
 
 target_include_directories(cmsRunGlibC PUBLIC ${PYTHON_INCLUDE_DIR})
+include_directories(cmsRunGlibC PUBLIC ${PYTHON_INCLUDE_DIR})
 target_include_directories(cmsRunGlibC PUBLIC ${Boost_INCLUDE_DIR}/python)
+include_directories(cmsRunGlibC PUBLIC ${Boost_INCLUDE_DIR}/python)
 target_include_directories(cmsRunGlibC PUBLIC ${TINYXML_INCLUDE_DIR})
+include_directories(cmsRunGlibC PUBLIC ${TINYXML_INCLUDE_DIR})
 target_include_directories(cmsRunGlibC PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(cmsRunGlibC PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(cmsRunGlibC PUBLIC ${MD5_INCLUDE_DIR})
+include_directories(cmsRunGlibC PUBLIC ${MD5_INCLUDE_DIR})
 target_include_directories(cmsRunGlibC PUBLIC ${TBB_INCLUDE_DIRS})
+include_directories(cmsRunGlibC PUBLIC ${TBB_INCLUDE_DIRS})
 target_include_directories(cmsRunGlibC PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(cmsRunGlibC PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(cmsRunGlibC PUBLIC
-  ${Boost_REGEX_LIBRARY_RELEASE}
-  dl
-  Matrix
-  Thread
   FWCoreParameterSet
+  dl
+  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
+  Thread
+  ${Boost_REGEX_LIBRARY_RELEASE}
   FWCoreMessageLogger
   FWCoreFramework
   Tree
@@ -25,15 +32,15 @@ target_link_libraries(cmsRunGlibC PUBLIC
   FWCoreServiceRegistry
   ${Boost_SERIALIZATION_LIBRARY_RELEASE}
   Net
-  ${PYTHON_LIBRARY}
+  ${Boost_PYTHON_LIBRARY_RELEASE}
+  Matrix
   Core
   ${Boost_IOSTREAMS_LIBRARY_RELEASE}
-  FWCoreUtilities
+  ${PYTHON_LIBRARY}
   ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
-  ${Boost_PYTHON_LIBRARY_RELEASE}
+  FWCoreUtilities
   RIO
   FWCorePythonParameterSet
-  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
   FWCorePluginManager
   ${TBB_LIBRARIES}
 )
@@ -45,28 +52,32 @@ add_executable(cmsRunTC
 )
 
 target_include_directories(cmsRunTC PUBLIC ${PYTHON_INCLUDE_DIR})
+include_directories(cmsRunTC PUBLIC ${PYTHON_INCLUDE_DIR})
 target_include_directories(cmsRunTC PUBLIC ${Boost_INCLUDE_DIR}/python)
+include_directories(cmsRunTC PUBLIC ${Boost_INCLUDE_DIR}/python)
 target_include_directories(cmsRunTC PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(cmsRunTC PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(cmsRunTC PUBLIC ${TBB_INCLUDE_DIRS})
+include_directories(cmsRunTC PUBLIC ${TBB_INCLUDE_DIRS})
 target_link_libraries(cmsRunTC PUBLIC
-  ${Boost_REGEX_LIBRARY_RELEASE}
-  dl
-  ${Boost_IOSTREAMS_LIBRARY_RELEASE}
-  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
   FWCoreParameterSet
-  FWCoreUtilities
+  dl
+  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
+  ${Boost_REGEX_LIBRARY_RELEASE}
   FWCoreMessageLogger
   FWCoreFramework
-  ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
-  ${Boost_PYTHON_LIBRARY_RELEASE}
   ${Boost_THREAD_LIBRARY_RELEASE}
   ${Boost_SYSTEM_LIBRARY_RELEASE}
   FWCoreServiceRegistry
   ${Boost_FILESYSTEM_LIBRARY_RELEASE}
+  ${PYTHON_LIBRARY}
+  ${Boost_IOSTREAMS_LIBRARY_RELEASE}
+  FWCoreUtilities
+  ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
+  ${Boost_PYTHON_LIBRARY_RELEASE}
+  FWCorePythonParameterSet
   FWCorePluginManager
   ${TBB_LIBRARIES}
-  ${PYTHON_LIBRARY}
-  FWCorePythonParameterSet
 )
 
 install( TARGETS cmsRunTC EXPORT cmsRunTC DESTINATION  bin )
@@ -76,17 +87,24 @@ add_executable(cmsRun
 )
 
 target_include_directories(cmsRun PUBLIC ${PYTHON_INCLUDE_DIR})
+include_directories(cmsRun PUBLIC ${PYTHON_INCLUDE_DIR})
 target_include_directories(cmsRun PUBLIC ${Boost_INCLUDE_DIR}/python)
+include_directories(cmsRun PUBLIC ${Boost_INCLUDE_DIR}/python)
 target_include_directories(cmsRun PUBLIC ${TINYXML_INCLUDE_DIR})
+include_directories(cmsRun PUBLIC ${TINYXML_INCLUDE_DIR})
 target_include_directories(cmsRun PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(cmsRun PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(cmsRun PUBLIC ${MD5_INCLUDE_DIR})
+include_directories(cmsRun PUBLIC ${MD5_INCLUDE_DIR})
 target_include_directories(cmsRun PUBLIC ${TBB_INCLUDE_DIRS})
+include_directories(cmsRun PUBLIC ${TBB_INCLUDE_DIRS})
 target_include_directories(cmsRun PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(cmsRun PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(cmsRun PUBLIC
-  ${Boost_REGEX_LIBRARY_RELEASE}
+  FWCoreParameterSet
   dl
   ${Boost_FILESYSTEM_LIBRARY_RELEASE}
-  FWCoreParameterSet
+  ${Boost_REGEX_LIBRARY_RELEASE}
   FWCoreMessageLogger
   FWCoreFramework
   ${Boost_THREAD_LIBRARY_RELEASE}
@@ -110,17 +128,24 @@ add_executable(cmsRunVDT
 )
 
 target_include_directories(cmsRunVDT PUBLIC ${PYTHON_INCLUDE_DIR})
+include_directories(cmsRunVDT PUBLIC ${PYTHON_INCLUDE_DIR})
 target_include_directories(cmsRunVDT PUBLIC ${Boost_INCLUDE_DIR}/python)
+include_directories(cmsRunVDT PUBLIC ${Boost_INCLUDE_DIR}/python)
 target_include_directories(cmsRunVDT PUBLIC ${TINYXML_INCLUDE_DIR})
+include_directories(cmsRunVDT PUBLIC ${TINYXML_INCLUDE_DIR})
 target_include_directories(cmsRunVDT PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(cmsRunVDT PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(cmsRunVDT PUBLIC ${MD5_INCLUDE_DIR})
+include_directories(cmsRunVDT PUBLIC ${MD5_INCLUDE_DIR})
 target_include_directories(cmsRunVDT PUBLIC ${TBB_INCLUDE_DIRS})
+include_directories(cmsRunVDT PUBLIC ${TBB_INCLUDE_DIRS})
 target_include_directories(cmsRunVDT PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(cmsRunVDT PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(cmsRunVDT PUBLIC
-  ${Boost_REGEX_LIBRARY_RELEASE}
+  FWCoreParameterSet
   dl
   ${Boost_FILESYSTEM_LIBRARY_RELEASE}
-  FWCoreParameterSet
+  ${Boost_REGEX_LIBRARY_RELEASE}
   FWCoreMessageLogger
   FWCoreFramework
   ${Boost_THREAD_LIBRARY_RELEASE}
