--- a/FWCore/MessageService/CMakeLists.txt
+++ b/FWCore/MessageService/CMakeLists.txt
@@ -1,3 +1,5 @@
+include_directories(${CMAKE_SOURCE_DIR})
+include_directories(/usr/include/)
 add_subdirectory(bin)
 if(BUILDTEST)
 add_subdirectory(test)
@@ -23,18 +25,25 @@ add_library(FWCoreMessageService SHARED
 )
 
 target_include_directories(FWCoreMessageService PUBLIC ${PYTHON_INCLUDE_DIR})
+include_directories(FWCoreMessageService PUBLIC ${PYTHON_INCLUDE_DIR})
 target_include_directories(FWCoreMessageService PUBLIC ${MD5_INCLUDE_DIR})
+include_directories(FWCoreMessageService PUBLIC ${MD5_INCLUDE_DIR})
 target_include_directories(FWCoreMessageService PUBLIC ${Boost_INCLUDE_DIR}/python)
-target_include_directories(FWCoreMessageService PUBLIC ${ROOT_INCLUDE_DIR})
-target_include_directories(FWCoreMessageService PUBLIC ${Boost_INCLUDE_DIR})
-target_include_directories(FWCoreMessageService PUBLIC ${TBB_INCLUDE_DIRS})
+include_directories(FWCoreMessageService PUBLIC ${Boost_INCLUDE_DIR}/python)
 target_include_directories(FWCoreMessageService PUBLIC ${TINYXML_INCLUDE_DIR})
+include_directories(FWCoreMessageService PUBLIC ${TINYXML_INCLUDE_DIR})
+target_include_directories(FWCoreMessageService PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(FWCoreMessageService PUBLIC ${Boost_INCLUDE_DIR})
+target_include_directories(FWCoreMessageService PUBLIC ${TBB_INCLUDE_DIRS})
+include_directories(FWCoreMessageService PUBLIC ${TBB_INCLUDE_DIRS})
+target_include_directories(FWCoreMessageService PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(FWCoreMessageService PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(FWCoreMessageService PUBLIC
-  ${Boost_REGEX_LIBRARY_RELEASE}
+  FWCoreParameterSet
   dl
   ${Boost_IOSTREAMS_LIBRARY_RELEASE}
   ${Boost_SERIALIZATION_LIBRARY_RELEASE}
-  FWCoreParameterSet
+  ${Boost_REGEX_LIBRARY_RELEASE}
   FWCoreUtilities
   FWCoreMessageLogger
   ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
