--- a/FWCore/ParameterSet/CMakeLists.txt
+++ b/FWCore/ParameterSet/CMakeLists.txt
@@ -1,3 +1,5 @@
+include_directories(${CMAKE_SOURCE_DIR})
+include_directories(/usr/include/)
 add_subdirectory(bin)
 if(BUILDTEST)
 add_subdirectory(test)
@@ -36,24 +38,27 @@ add_library(FWCoreParameterSet SHARED
 )
 
 target_include_directories(FWCoreParameterSet PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(FWCoreParameterSet PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(FWCoreParameterSet PUBLIC ${TBB_INCLUDE_DIRS})
+include_directories(FWCoreParameterSet PUBLIC ${TBB_INCLUDE_DIRS})
 target_include_directories(FWCoreParameterSet PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(FWCoreParameterSet PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(FWCoreParameterSet PUBLIC
   ${Boost_REGEX_LIBRARY_RELEASE}
   dl
+  ${Boost_IOSTREAMS_LIBRARY_RELEASE}
   ${Boost_FILESYSTEM_LIBRARY_RELEASE}
+  FWCoreUtilities
   FWCoreMessageLogger
+  ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
+  ${Boost_PYTHON_LIBRARY_RELEASE}
   ${Boost_THREAD_LIBRARY_RELEASE}
   ${Boost_SYSTEM_LIBRARY_RELEASE}
   ${Boost_SERIALIZATION_LIBRARY_RELEASE}
-  ${PYTHON_LIBRARY}
-  DataFormatsProvenance
-  ${Boost_IOSTREAMS_LIBRARY_RELEASE}
-  FWCoreUtilities
-  ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
-  ${Boost_PYTHON_LIBRARY_RELEASE}
   FWCorePluginManager
   ${TBB_LIBRARIES}
+  ${PYTHON_LIBRARY}
+  DataFormatsProvenance
 )
 
 install( TARGETS FWCoreParameterSet EXPORT FWCoreParameterSet DESTINATION  lib )
