--- a/FWCore/ParameterSet/test/CMakeLists.txt
+++ b/FWCore/ParameterSet/test/CMakeLists.txt
@@ -3,28 +3,32 @@ add_executable(testParameterSet
 )
 
 target_include_directories(testParameterSet PUBLIC ${CPPUNIT_INCLUDE_DIR})
+include_directories(testParameterSet PUBLIC ${CPPUNIT_INCLUDE_DIR})
 target_link_libraries(testParameterSet PUBLIC
   FWCoreParameterSet
   ${CPPUNIT_LIBRARY}
   FWCoreUtilities
 )
 
-install( TARGETS testParameterSet EXPORT testParameterSet DESTINATION  bin )
-
+add_test(NAME testParameterSet COMMAND testParameterSet)
 add_executable(TestFWCoreParameterSetDescription
   parameterSetDescription_t.cc
 )
 
 target_include_directories(TestFWCoreParameterSetDescription PUBLIC ${MD5_INCLUDE_DIR})
+include_directories(TestFWCoreParameterSetDescription PUBLIC ${MD5_INCLUDE_DIR})
 target_include_directories(TestFWCoreParameterSetDescription PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(TestFWCoreParameterSetDescription PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(TestFWCoreParameterSetDescription PUBLIC ${TBB_INCLUDE_DIRS})
+include_directories(TestFWCoreParameterSetDescription PUBLIC ${TBB_INCLUDE_DIRS})
 target_include_directories(TestFWCoreParameterSetDescription PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(TestFWCoreParameterSetDescription PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(TestFWCoreParameterSetDescription PUBLIC
-  ${Boost_REGEX_LIBRARY_RELEASE}
+  FWCoreParameterSet
   dl
   ${Boost_IOSTREAMS_LIBRARY_RELEASE}
   ${Boost_SERIALIZATION_LIBRARY_RELEASE}
-  FWCoreParameterSet
+  ${Boost_REGEX_LIBRARY_RELEASE}
   FWCoreUtilities
   ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
   ${Boost_PYTHON_LIBRARY_RELEASE}
@@ -35,8 +39,7 @@ target_link_libraries(TestFWCoreParameterSetDescription PUBLIC
   DataFormatsProvenance
 )
 
-install( TARGETS TestFWCoreParameterSetDescription EXPORT TestFWCoreParameterSetDescription DESTINATION  bin )
-
+add_test(NAME TestFWCoreParameterSetDescription COMMAND TestFWCoreParameterSetDescription)
 add_executable(TestFWCoreParameterSetDriver
   TestFWCoreParameterSetDriver.cpp
 )
@@ -46,5 +49,4 @@ target_link_libraries(TestFWCoreParameterSetDriver PUBLIC
   FWCoreUtilities
 )
 
-install( TARGETS TestFWCoreParameterSetDriver EXPORT TestFWCoreParameterSetDriver DESTINATION  bin )
-
+add_test(NAME TestFWCoreParameterSetDriver COMMAND TestFWCoreParameterSetDriver)
