--- a/FWCore/PluginManager/test/CMakeLists.txt
+++ b/FWCore/PluginManager/test/CMakeLists.txt
@@ -3,7 +3,9 @@ add_executable(TestFWCorePluginManagerPluginFactoryManager
 )
 
 target_include_directories(TestFWCorePluginManagerPluginFactoryManager PUBLIC ${CPPUNIT_INCLUDE_DIR})
+include_directories(TestFWCorePluginManagerPluginFactoryManager PUBLIC ${CPPUNIT_INCLUDE_DIR})
 target_include_directories(TestFWCorePluginManagerPluginFactoryManager PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(TestFWCorePluginManagerPluginFactoryManager PUBLIC ${Boost_INCLUDE_DIR})
 target_link_libraries(TestFWCorePluginManagerPluginFactoryManager PUBLIC
   ${Boost_REGEX_LIBRARY_RELEASE}
   dl
@@ -19,17 +21,21 @@ target_link_libraries(TestFWCorePluginManagerPluginFactoryManager PUBLIC
   ${PYTHON_LIBRARY}
 )
 
-install( TARGETS TestFWCorePluginManagerPluginFactoryManager EXPORT TestFWCorePluginManagerPluginFactoryManager DESTINATION  bin )
-
+add_test(NAME TestFWCorePluginManagerPluginFactoryManager COMMAND TestFWCorePluginManagerPluginFactoryManager)
 add_executable(TestFWCorePluginManagerPluginManager
   pluginmanager_t.cc
 )
 
 target_include_directories(TestFWCorePluginManagerPluginManager PUBLIC ${CPPUNIT_INCLUDE_DIR})
+include_directories(TestFWCorePluginManagerPluginManager PUBLIC ${CPPUNIT_INCLUDE_DIR})
 target_include_directories(TestFWCorePluginManagerPluginManager PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(TestFWCorePluginManagerPluginManager PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(TestFWCorePluginManagerPluginManager PUBLIC ${TBB_INCLUDE_DIRS})
+include_directories(TestFWCorePluginManagerPluginManager PUBLIC ${TBB_INCLUDE_DIRS})
 target_include_directories(TestFWCorePluginManagerPluginManager PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(TestFWCorePluginManagerPluginManager PUBLIC ${ROOT_INCLUDE_DIR})
 target_include_directories(TestFWCorePluginManagerPluginManager PUBLIC ${MD5_INCLUDE_DIR})
+include_directories(TestFWCorePluginManagerPluginManager PUBLIC ${MD5_INCLUDE_DIR})
 target_link_libraries(TestFWCorePluginManagerPluginManager PUBLIC
   ${Boost_REGEX_LIBRARY_RELEASE}
   dl
@@ -46,14 +52,15 @@ target_link_libraries(TestFWCorePluginManagerPluginManager PUBLIC
   ${PYTHON_LIBRARY}
 )
 
-install( TARGETS TestFWCorePluginManagerPluginManager EXPORT TestFWCorePluginManagerPluginManager DESTINATION  bin )
-
+add_test(NAME TestFWCorePluginManagerPluginManager COMMAND TestFWCorePluginManagerPluginManager)
 add_executable(TestFWCorePluginManagerCacheParser
   cacheparser_t.cc
 )
 
 target_include_directories(TestFWCorePluginManagerCacheParser PUBLIC ${CPPUNIT_INCLUDE_DIR})
+include_directories(TestFWCorePluginManagerCacheParser PUBLIC ${CPPUNIT_INCLUDE_DIR})
 target_include_directories(TestFWCorePluginManagerCacheParser PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(TestFWCorePluginManagerCacheParser PUBLIC ${Boost_INCLUDE_DIR})
 target_link_libraries(TestFWCorePluginManagerCacheParser PUBLIC
   ${Boost_REGEX_LIBRARY_RELEASE}
   dl
@@ -69,14 +76,15 @@ target_link_libraries(TestFWCorePluginManagerCacheParser PUBLIC
   ${PYTHON_LIBRARY}
 )
 
-install( TARGETS TestFWCorePluginManagerCacheParser EXPORT TestFWCorePluginManagerCacheParser DESTINATION  bin )
-
+add_test(NAME TestFWCorePluginManagerCacheParser COMMAND TestFWCorePluginManagerCacheParser)
 add_executable(TestFWCorePluginManagerPluginFactory
   pluginfactory_t.cc
 )
 
 target_include_directories(TestFWCorePluginManagerPluginFactory PUBLIC ${CPPUNIT_INCLUDE_DIR})
+include_directories(TestFWCorePluginManagerPluginFactory PUBLIC ${CPPUNIT_INCLUDE_DIR})
 target_include_directories(TestFWCorePluginManagerPluginFactory PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(TestFWCorePluginManagerPluginFactory PUBLIC ${Boost_INCLUDE_DIR})
 target_link_libraries(TestFWCorePluginManagerPluginFactory PUBLIC
   ${Boost_REGEX_LIBRARY_RELEASE}
   dl
@@ -92,8 +100,7 @@ target_link_libraries(TestFWCorePluginManagerPluginFactory PUBLIC
   ${PYTHON_LIBRARY}
 )
 
-install( TARGETS TestFWCorePluginManagerPluginFactory EXPORT TestFWCorePluginManagerPluginFactory DESTINATION  bin )
-
+add_test(NAME TestFWCorePluginManagerPluginFactory COMMAND TestFWCorePluginManagerPluginFactory)
 add_library(TestFWCorePluginManagerDummyFactory SHARED 
   DummyFactory.cc
 )
@@ -102,21 +109,21 @@ target_link_libraries(TestFWCorePluginManagerDummyFactory PUBLIC
   FWCorePluginManager
 )
 
-install( TARGETS TestFWCorePluginManagerDummyFactory EXPORT TestFWCorePluginManagerDummyFactory DESTINATION  lib )
-
 add_library(TestFWCorePluginManagerDummyPlugins SHARED 
   OneDummy.cc
   TwoDummy.cc
 )
 
 target_include_directories(TestFWCorePluginManagerDummyPlugins PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(TestFWCorePluginManagerDummyPlugins PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(TestFWCorePluginManagerDummyPlugins PUBLIC ${TBB_INCLUDE_DIRS})
+include_directories(TestFWCorePluginManagerDummyPlugins PUBLIC ${TBB_INCLUDE_DIRS})
 target_include_directories(TestFWCorePluginManagerDummyPlugins PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(TestFWCorePluginManagerDummyPlugins PUBLIC ${ROOT_INCLUDE_DIR})
 target_include_directories(TestFWCorePluginManagerDummyPlugins PUBLIC ${MD5_INCLUDE_DIR})
+include_directories(TestFWCorePluginManagerDummyPlugins PUBLIC ${MD5_INCLUDE_DIR})
 target_link_libraries(TestFWCorePluginManagerDummyPlugins PUBLIC
   FWCorePluginManager
   TestFWCorePluginManagerDummyFactory
 )
-
-install( TARGETS TestFWCorePluginManagerDummyPlugins EXPORT TestFWCorePluginManagerDummyPlugins DESTINATION  lib )
 
