--- a/FWCore/PythonParameterSet/bin/CMakeLists.txt
+++ b/FWCore/PythonParameterSet/bin/CMakeLists.txt
@@ -3,12 +3,13 @@ add_executable(edmConfigHash
 )
 
 target_include_directories(edmConfigHash PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(edmConfigHash PUBLIC ${Boost_INCLUDE_DIR})
 target_link_libraries(edmConfigHash PUBLIC
-  FWCoreParameterSet
+  ${Boost_REGEX_LIBRARY_RELEASE}
   dl
   ${Boost_IOSTREAMS_LIBRARY_RELEASE}
   ${Boost_SERIALIZATION_LIBRARY_RELEASE}
-  ${Boost_REGEX_LIBRARY_RELEASE}
+  FWCoreParameterSet
   ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
   ${Boost_PYTHON_LIBRARY_RELEASE}
   ${Boost_THREAD_LIBRARY_RELEASE}
@@ -25,12 +26,13 @@ add_executable(edmParameterSetDump
 )
 
 target_include_directories(edmParameterSetDump PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(edmParameterSetDump PUBLIC ${Boost_INCLUDE_DIR})
 target_link_libraries(edmParameterSetDump PUBLIC
-  FWCoreParameterSet
+  ${Boost_REGEX_LIBRARY_RELEASE}
   dl
   ${Boost_IOSTREAMS_LIBRARY_RELEASE}
   ${Boost_SERIALIZATION_LIBRARY_RELEASE}
-  ${Boost_REGEX_LIBRARY_RELEASE}
+  FWCoreParameterSet
   ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
   ${Boost_PYTHON_LIBRARY_RELEASE}
   ${Boost_THREAD_LIBRARY_RELEASE}
