--- a/FWCore/ServiceRegistry/test/CMakeLists.txt
+++ b/FWCore/ServiceRegistry/test/CMakeLists.txt
@@ -6,7 +6,9 @@ add_library(FWCoreServiceRegistryTestDummyService SHARED
 )
 
 target_include_directories(FWCoreServiceRegistryTestDummyService PUBLIC ${CPPUNIT_INCLUDE_DIR})
+include_directories(FWCoreServiceRegistryTestDummyService PUBLIC ${CPPUNIT_INCLUDE_DIR})
 target_include_directories(FWCoreServiceRegistryTestDummyService PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(FWCoreServiceRegistryTestDummyService PUBLIC ${Boost_INCLUDE_DIR})
 target_link_libraries(FWCoreServiceRegistryTestDummyService PUBLIC
   ${Boost_REGEX_LIBRARY_RELEASE}
   dl
@@ -22,16 +24,18 @@ target_link_libraries(FWCoreServiceRegistryTestDummyService PUBLIC
   ${PYTHON_LIBRARY}
 )
 
-install( TARGETS FWCoreServiceRegistryTestDummyService EXPORT FWCoreServiceRegistryTestDummyService DESTINATION  lib )
-
 add_library(FWCoreServiceRegistryTestDummyServicePlugin SHARED 
   stubs/Modules.cc
 )
 
-target_include_directories(FWCoreServiceRegistryTestDummyServicePlugin PUBLIC ${CPPUNIT_INCLUDE_DIR})
-target_include_directories(FWCoreServiceRegistryTestDummyServicePlugin PUBLIC ${Boost_INCLUDE_DIR}/python)
-target_include_directories(FWCoreServiceRegistryTestDummyServicePlugin PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(FWCoreServiceRegistryTestDummyServicePlugin PUBLIC ${PYTHON_INCLUDE_DIR})
+include_directories(FWCoreServiceRegistryTestDummyServicePlugin PUBLIC ${PYTHON_INCLUDE_DIR})
+target_include_directories(FWCoreServiceRegistryTestDummyServicePlugin PUBLIC ${CPPUNIT_INCLUDE_DIR})
+include_directories(FWCoreServiceRegistryTestDummyServicePlugin PUBLIC ${CPPUNIT_INCLUDE_DIR})
+target_include_directories(FWCoreServiceRegistryTestDummyServicePlugin PUBLIC ${Boost_INCLUDE_DIR}/python)
+include_directories(FWCoreServiceRegistryTestDummyServicePlugin PUBLIC ${Boost_INCLUDE_DIR}/python)
+target_include_directories(FWCoreServiceRegistryTestDummyServicePlugin PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(FWCoreServiceRegistryTestDummyServicePlugin PUBLIC ${Boost_INCLUDE_DIR})
 target_link_libraries(FWCoreServiceRegistryTestDummyServicePlugin PUBLIC
   ${Boost_REGEX_LIBRARY_RELEASE}
   dl
@@ -48,8 +52,6 @@ target_link_libraries(FWCoreServiceRegistryTestDummyServicePlugin PUBLIC
   FWCoreServiceRegistryTestDummyService
 )
 
-install( TARGETS FWCoreServiceRegistryTestDummyServicePlugin EXPORT FWCoreServiceRegistryTestDummyServicePlugin DESTINATION  lib )
-
 add_executable(testServiceRegistry
   serviceregistry_t.cppunit.cpp
   servicesmanager_t.cppunit.cc
@@ -57,18 +59,20 @@ add_executable(testServiceRegistry
 )
 
 target_include_directories(testServiceRegistry PUBLIC ${CPPUNIT_INCLUDE_DIR})
+include_directories(testServiceRegistry PUBLIC ${CPPUNIT_INCLUDE_DIR})
 target_include_directories(testServiceRegistry PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(testServiceRegistry PUBLIC ${Boost_INCLUDE_DIR})
 target_link_libraries(testServiceRegistry PUBLIC
-  ${Boost_REGEX_LIBRARY_RELEASE}
-  dl
-  ${CPPUNIT_LIBRARY}
-  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
   FWCoreParameterSet
+  dl
+  ${Boost_IOSTREAMS_LIBRARY_RELEASE}
+  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
+  ${Boost_REGEX_LIBRARY_RELEASE}
   FWCoreUtilities
   ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
   ${Boost_PYTHON_LIBRARY_RELEASE}
   ${Boost_THREAD_LIBRARY_RELEASE}
-  ${Boost_IOSTREAMS_LIBRARY_RELEASE}
+  ${CPPUNIT_LIBRARY}
   ${Boost_SYSTEM_LIBRARY_RELEASE}
   FWCoreServiceRegistry
   ${Boost_FILESYSTEM_LIBRARY_RELEASE}
@@ -77,30 +81,36 @@ target_link_libraries(testServiceRegistry PUBLIC
   FWCoreServiceRegistryTestDummyService
 )
 
-install( TARGETS testServiceRegistry EXPORT testServiceRegistry DESTINATION  bin )
-
+add_test(NAME testServiceRegistry COMMAND testServiceRegistry)
 add_executable(servicesmanager_order
   servicesmanager_order.cpp
 )
 
-target_include_directories(servicesmanager_order PUBLIC ${PYTHON_INCLUDE_DIR})
-target_include_directories(servicesmanager_order PUBLIC ${Boost_INCLUDE_DIR}/python)
-target_include_directories(servicesmanager_order PUBLIC ${Boost_INCLUDE_DIR})
-target_include_directories(servicesmanager_order PUBLIC ${MD5_INCLUDE_DIR})
 target_include_directories(servicesmanager_order PUBLIC ${CPPUNIT_INCLUDE_DIR})
+include_directories(servicesmanager_order PUBLIC ${CPPUNIT_INCLUDE_DIR})
+target_include_directories(servicesmanager_order PUBLIC ${PYTHON_INCLUDE_DIR})
+include_directories(servicesmanager_order PUBLIC ${PYTHON_INCLUDE_DIR})
+target_include_directories(servicesmanager_order PUBLIC ${MD5_INCLUDE_DIR})
+include_directories(servicesmanager_order PUBLIC ${MD5_INCLUDE_DIR})
+target_include_directories(servicesmanager_order PUBLIC ${Boost_INCLUDE_DIR}/python)
+include_directories(servicesmanager_order PUBLIC ${Boost_INCLUDE_DIR}/python)
+target_include_directories(servicesmanager_order PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(servicesmanager_order PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(servicesmanager_order PUBLIC ${TBB_INCLUDE_DIRS})
+include_directories(servicesmanager_order PUBLIC ${TBB_INCLUDE_DIRS})
 target_include_directories(servicesmanager_order PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(servicesmanager_order PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(servicesmanager_order PUBLIC
-  ${Boost_REGEX_LIBRARY_RELEASE}
-  dl
-  ${CPPUNIT_LIBRARY}
-  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
   FWCoreParameterSet
+  dl
+  ${Boost_IOSTREAMS_LIBRARY_RELEASE}
+  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
+  ${Boost_REGEX_LIBRARY_RELEASE}
   FWCoreUtilities
   ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
   ${Boost_PYTHON_LIBRARY_RELEASE}
   ${Boost_THREAD_LIBRARY_RELEASE}
-  ${Boost_IOSTREAMS_LIBRARY_RELEASE}
+  ${CPPUNIT_LIBRARY}
   ${Boost_SYSTEM_LIBRARY_RELEASE}
   FWCoreServiceRegistry
   ${Boost_FILESYSTEM_LIBRARY_RELEASE}
@@ -109,5 +119,4 @@ target_link_libraries(servicesmanager_order PUBLIC
   FWCoreServiceRegistryTestDummyService
 )
 
-install( TARGETS servicesmanager_order EXPORT servicesmanager_order DESTINATION  bin )
-
+add_test(NAME servicesmanager_order COMMAND servicesmanager_order)
