--- a/FWCore/TFWLiteSelectorTest/CMakeLists.txt
+++ b/FWCore/TFWLiteSelectorTest/CMakeLists.txt
@@ -1,3 +1,5 @@
+include_directories(${CMAKE_SOURCE_DIR})
+include_directories(/usr/include/)
 reflex_dictionary(FWCoreTFWLiteSelectorTest src/classes.h src/classes_def.xml)
 add_library(FWCoreTFWLiteSelectorTest SHARED 
   src/ThingsTSelector.cc
@@ -7,7 +9,9 @@ add_library(FWCoreTFWLiteSelectorTest SHARED
 
 add_dependencies(FWCoreTFWLiteSelectorTest FWCoreTFWLiteSelectorTestDict)
 target_include_directories(FWCoreTFWLiteSelectorTest PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(FWCoreTFWLiteSelectorTest PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(FWCoreTFWLiteSelectorTest PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(FWCoreTFWLiteSelectorTest PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(FWCoreTFWLiteSelectorTest PUBLIC
   Core
   Matrix
