--- a/Utilities/General/test/CMakeLists.txt
+++ b/Utilities/General/test/CMakeLists.txt
@@ -6,18 +6,18 @@ target_link_libraries(test_precomputed_value_sort PUBLIC
   UtilitiesGeneral
 )
 
-install( TARGETS test_precomputed_value_sort EXPORT test_precomputed_value_sort DESTINATION  bin )
-
+add_test(NAME test_precomputed_value_sort COMMAND test_precomputed_value_sort)
 add_executable(TestTBB
   TestTBB.cc
 )
 
 target_include_directories(TestTBB PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(TestTBB PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(TestTBB PUBLIC ${TBB_INCLUDE_DIRS})
+include_directories(TestTBB PUBLIC ${TBB_INCLUDE_DIRS})
 target_link_libraries(TestTBB PUBLIC
   ${TBB_LIBRARIES}
   UtilitiesGeneral
 )
 
-install( TARGETS TestTBB EXPORT TestTBB DESTINATION  bin )
-
+add_test(NAME TestTBB COMMAND TestTBB)
