--- a/Utilities/RFIOAdaptor/plugins/CMakeLists.txt
+++ b/Utilities/RFIOAdaptor/plugins/CMakeLists.txt
@@ -3,13 +3,21 @@ add_library(UtilitiesRFIOAdaptorPlugin SHARED
 )
 
 target_include_directories(UtilitiesRFIOAdaptorPlugin PUBLIC ${PYTHON_INCLUDE_DIR})
+include_directories(UtilitiesRFIOAdaptorPlugin PUBLIC ${PYTHON_INCLUDE_DIR})
 target_include_directories(UtilitiesRFIOAdaptorPlugin PUBLIC ${CASTOR_INCLUDE_DIRS}/shift)
+include_directories(UtilitiesRFIOAdaptorPlugin PUBLIC ${CASTOR_INCLUDE_DIRS}/shift)
 target_include_directories(UtilitiesRFIOAdaptorPlugin PUBLIC ${MD5_INCLUDE_DIR})
+include_directories(UtilitiesRFIOAdaptorPlugin PUBLIC ${MD5_INCLUDE_DIR})
 target_include_directories(UtilitiesRFIOAdaptorPlugin PUBLIC ${Boost_INCLUDE_DIR}/python)
+include_directories(UtilitiesRFIOAdaptorPlugin PUBLIC ${Boost_INCLUDE_DIR}/python)
 target_include_directories(UtilitiesRFIOAdaptorPlugin PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(UtilitiesRFIOAdaptorPlugin PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(UtilitiesRFIOAdaptorPlugin PUBLIC ${TBB_INCLUDE_DIRS})
+include_directories(UtilitiesRFIOAdaptorPlugin PUBLIC ${TBB_INCLUDE_DIRS})
 target_include_directories(UtilitiesRFIOAdaptorPlugin PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(UtilitiesRFIOAdaptorPlugin PUBLIC ${ROOT_INCLUDE_DIR})
 target_include_directories(UtilitiesRFIOAdaptorPlugin PUBLIC ${CASTOR_INCLUDE_DIRS})
+include_directories(UtilitiesRFIOAdaptorPlugin PUBLIC ${CASTOR_INCLUDE_DIRS})
 target_link_libraries(UtilitiesRFIOAdaptorPlugin PUBLIC
   UtilitiesStorageFactory
   UtilitiesRFIOAdaptor
@@ -24,6 +32,10 @@ add_library(RFIOCastorPlugin SHARED
   RFIOCastorPlugin.cc
 )
 
+target_include_directories(RFIOCastorPlugin PUBLIC ${CASTOR_INCLUDE_DIRS}/shift)
+include_directories(RFIOCastorPlugin PUBLIC ${CASTOR_INCLUDE_DIRS}/shift)
+target_include_directories(RFIOCastorPlugin PUBLIC ${CASTOR_INCLUDE_DIRS})
+include_directories(RFIOCastorPlugin PUBLIC ${CASTOR_INCLUDE_DIRS})
 target_link_libraries(RFIOCastorPlugin PUBLIC
   UtilitiesRFIOAdaptor
 )
