--- a/Utilities/StorageFactory/bin/CMakeLists.txt
+++ b/Utilities/StorageFactory/bin/CMakeLists.txt
@@ -3,7 +3,9 @@ add_executable(cms_anycp
 )
 
 target_include_directories(cms_anycp PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(cms_anycp PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(cms_anycp PUBLIC ${TBB_INCLUDE_DIRS})
+include_directories(cms_anycp PUBLIC ${TBB_INCLUDE_DIRS})
 target_link_libraries(cms_anycp PUBLIC
   UtilitiesStorageFactory
 )
