--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,19 +5,19 @@ include_directories(${CMAKE_SOURCE_DIR})
 include_directories(/usr/include/)
 find_package(CMakeTools)
 UseCMakeTools()
-find_package(ROOT 6.0.0 COMPONENTS Rint Thread Cling Core MathCore MathMore Matrix Minuit Physics MLP Foam Hist Spectrum Tree TreePlayer RIO XMLIO Net Gpad Graf Postscript Graf3d Eve RGL Gui GuiHtml Html EG Geom GeomBuilder PyROOT TMVA RooFitCore RooFit )
-find_package(TBB)
-find_package(XercesC)
-find_package(CLHEP)
-find_package(CppUnit)
-find_package(CASTOR)
-find_package(CMSMD5)
-find_package(TINYXML)
+find_package(ROOT 6.0.0 COMPONENTS Rint Thread Cling Core MathCore MathMore Matrix Minuit Minuit2 Physics MLP Foam Hist Spectrum Tree TreePlayer RIO XMLIO Net Gpad Graf Postscript Graf3d Eve RGL Gui GuiHtml Html EG Geom GeomBuilder PyROOT TMVA RooFitCore RooFit )
 set(Boost_NO_BOOST_CMAKE ON)
 set(Boost_NO_SYSTEM_PATHS ON)
 find_package(Boost 1.57.0 COMPONENTS filesystem thread iostreams python regex serialization system program_options )
 find_package(PythonInterp)
 find_package(PythonLibs)
+find_package(XercesC)
+find_package(CLHEP)
+find_package(CMSMD5)
+find_package(TINYXML)
+find_package(CASTOR)
+find_package(TBB)
+find_package(CppUnit)
 include_directories(${PYTHON_INCLUDE_DIR})
 include_directories(${Boost_INCLUDE_DIR}/python)
 include_directories(${TINYXML_INCLUDE_DIR})
@@ -42,7 +42,7 @@ add_subdirectory(SimDataFormats)
 install(DIRECTORY SimDataFormats DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
 add_subdirectory(Utilities)
 install(DIRECTORY Utilities DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
-install(FILES CMakeLists.txt README.md DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
+install(FILES CMakeLists.txt DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
 install(DIRECTORY cmaketools DESTINATION ${CMAKE_INSTALL_PREFIX}/src PATTERN ".git" EXCLUDE)
-
+include(CTest)
 
