--- a/DataFormats/Common/CMakeLists.txt
+++ b/DataFormats/Common/CMakeLists.txt
@@ -1,3 +1,5 @@
+include_directories(${CMAKE_SOURCE_DIR})
+include_directories(/usr/include/)
 if(BUILDTEST)
 add_subdirectory(test)
 endif()
@@ -27,21 +29,23 @@ add_library(DataFormatsCommon SHARED
 
 add_dependencies(DataFormatsCommon DataFormatsCommonDict)
 target_include_directories(DataFormatsCommon PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(DataFormatsCommon PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(DataFormatsCommon PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(DataFormatsCommon PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(DataFormatsCommon PUBLIC
   ${Boost_REGEX_LIBRARY_RELEASE}
   dl
   ${Boost_IOSTREAMS_LIBRARY_RELEASE}
   ${Boost_SERIALIZATION_LIBRARY_RELEASE}
-  FWCoreMessageLogger
-  ${PYTHON_LIBRARY}
-  ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
   FWCoreUtilities
+  FWCoreMessageLogger
+  ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
+  ${Boost_PYTHON_LIBRARY_RELEASE}
   ${Boost_THREAD_LIBRARY_RELEASE}
   ${Boost_SYSTEM_LIBRARY_RELEASE}
   DataFormatsStdDictionaries
   ${Boost_FILESYSTEM_LIBRARY_RELEASE}
-  ${Boost_PYTHON_LIBRARY_RELEASE}
+  ${PYTHON_LIBRARY}
   DataFormatsProvenance
 )
 
