--- a/DataFormats/FEDRawData/CMakeLists.txt
+++ b/DataFormats/FEDRawData/CMakeLists.txt
@@ -1,3 +1,5 @@
+include_directories(${CMAKE_SOURCE_DIR})
+include_directories(/usr/include/)
 if(BUILDTEST)
 add_subdirectory(test)
 endif()
@@ -13,9 +15,13 @@ add_library(DataFormatsFEDRawData SHARED
 
 add_dependencies(DataFormatsFEDRawData DataFormatsFEDRawDataDict)
 target_include_directories(DataFormatsFEDRawData PUBLIC ${MD5_INCLUDE_DIR})
+include_directories(DataFormatsFEDRawData PUBLIC ${MD5_INCLUDE_DIR})
 target_include_directories(DataFormatsFEDRawData PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(DataFormatsFEDRawData PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(DataFormatsFEDRawData PUBLIC ${TBB_INCLUDE_DIRS})
+include_directories(DataFormatsFEDRawData PUBLIC ${TBB_INCLUDE_DIRS})
 target_include_directories(DataFormatsFEDRawData PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(DataFormatsFEDRawData PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(DataFormatsFEDRawData PUBLIC
   DataFormatsCommon
   FWCoreUtilities
