--- a/DataFormats/TestObjects/test/CMakeLists.txt
+++ b/DataFormats/TestObjects/test/CMakeLists.txt
@@ -3,13 +3,14 @@ add_executable(Enum_t
 )
 
 target_include_directories(Enum_t PUBLIC ${CPPUNIT_INCLUDE_DIR})
+include_directories(Enum_t PUBLIC ${CPPUNIT_INCLUDE_DIR})
 target_include_directories(Enum_t PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(Enum_t PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(Enum_t PUBLIC
   ${CPPUNIT_LIBRARY}
-  DataFormatsWrappedStdDictionaries
   DataFormatsStdDictionaries
   DataFormatsTestObjects
+  DataFormatsWrappedStdDictionaries
 )
 
-install( TARGETS Enum_t EXPORT Enum_t DESTINATION  bin )
-
+add_test(NAME Enum_t COMMAND Enum_t)
