--- a/FWCore/PluginManager/CMakeLists.txt
+++ b/FWCore/PluginManager/CMakeLists.txt
@@ -1,3 +1,5 @@
+include_directories(${CMAKE_SOURCE_DIR})
+include_directories(/usr/include/)
 add_subdirectory(bin)
 if(BUILDTEST)
 add_subdirectory(test)
@@ -14,23 +16,27 @@ add_library(FWCorePluginManager SHARED
   src/PluginManager.cc
 )
 
-target_include_directories(FWCorePluginManager PUBLIC ${Boost_INCLUDE_DIR})
-target_include_directories(FWCorePluginManager PUBLIC ${TBB_INCLUDE_DIRS})
 target_include_directories(FWCorePluginManager PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(FWCorePluginManager PUBLIC ${ROOT_INCLUDE_DIR})
+target_include_directories(FWCorePluginManager PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(FWCorePluginManager PUBLIC ${Boost_INCLUDE_DIR})
+target_include_directories(FWCorePluginManager PUBLIC ${TBB_INCLUDE_DIRS})
+include_directories(FWCorePluginManager PUBLIC ${TBB_INCLUDE_DIRS})
 target_include_directories(FWCorePluginManager PUBLIC ${MD5_INCLUDE_DIR})
+include_directories(FWCorePluginManager PUBLIC ${MD5_INCLUDE_DIR})
 target_link_libraries(FWCorePluginManager PUBLIC
   ${Boost_REGEX_LIBRARY_RELEASE}
   dl
-  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
-  ${Boost_THREAD_LIBRARY_RELEASE}
-  ${Boost_SYSTEM_LIBRARY_RELEASE}
+  ${Boost_IOSTREAMS_LIBRARY_RELEASE}
   ${Boost_FILESYSTEM_LIBRARY_RELEASE}
   FWCoreUtilities
-  ${Boost_IOSTREAMS_LIBRARY_RELEASE}
-  ${Boost_PYTHON_LIBRARY_RELEASE}
   ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
-  ${PYTHON_LIBRARY}
+  ${Boost_PYTHON_LIBRARY_RELEASE}
+  ${Boost_THREAD_LIBRARY_RELEASE}
+  ${Boost_SYSTEM_LIBRARY_RELEASE}
+  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
   ${TBB_LIBRARIES}
+  ${PYTHON_LIBRARY}
 )
 
 install( TARGETS FWCorePluginManager EXPORT FWCorePluginManager DESTINATION  lib )
