--- a/FWCore/PrescaleService/CMakeLists.txt
+++ b/FWCore/PrescaleService/CMakeLists.txt
@@ -1,3 +1,5 @@
+include_directories(${CMAKE_SOURCE_DIR})
+include_directories(/usr/include/)
 add_subdirectory(plugins)
 add_library(FWCorePrescaleService SHARED 
   src/PrescaleService.cc
