--- a/FWCore/PythonParameterSet/CMakeLists.txt
+++ b/FWCore/PythonParameterSet/CMakeLists.txt
@@ -1,3 +1,5 @@
+include_directories(${CMAKE_SOURCE_DIR})
+include_directories(/usr/include/)
 add_subdirectory(bin)
 if(BUILDTEST)
 add_subdirectory(test)
@@ -12,8 +14,11 @@ add_library(FWCorePythonParameterSet SHARED
 )
 
 target_include_directories(FWCorePythonParameterSet PUBLIC ${Boost_INCLUDE_DIR}/python)
+include_directories(FWCorePythonParameterSet PUBLIC ${Boost_INCLUDE_DIR}/python)
 target_include_directories(FWCorePythonParameterSet PUBLIC ${PYTHON_INCLUDE_DIR})
+include_directories(FWCorePythonParameterSet PUBLIC ${PYTHON_INCLUDE_DIR})
 target_include_directories(FWCorePythonParameterSet PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(FWCorePythonParameterSet PUBLIC ${Boost_INCLUDE_DIR})
 target_link_libraries(FWCorePythonParameterSet PUBLIC
   ${Boost_REGEX_LIBRARY_RELEASE}
   dl
@@ -22,11 +27,11 @@ target_link_libraries(FWCorePythonParameterSet PUBLIC
   FWCoreParameterSet
   FWCoreUtilities
   ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
-  ${PYTHON_LIBRARY}
+  ${Boost_PYTHON_LIBRARY_RELEASE}
   ${Boost_THREAD_LIBRARY_RELEASE}
   ${Boost_SYSTEM_LIBRARY_RELEASE}
   ${Boost_FILESYSTEM_LIBRARY_RELEASE}
-  ${Boost_PYTHON_LIBRARY_RELEASE}
+  ${PYTHON_LIBRARY}
   DataFormatsProvenance
 )
 
