--- a/FWCore/PythonParameterSet/test/CMakeLists.txt
+++ b/FWCore/PythonParameterSet/test/CMakeLists.txt
@@ -6,12 +6,19 @@ add_executable(testPythonParameterSet
 )
 
 target_include_directories(testPythonParameterSet PUBLIC ${CPPUNIT_INCLUDE_DIR})
+include_directories(testPythonParameterSet PUBLIC ${CPPUNIT_INCLUDE_DIR})
 target_include_directories(testPythonParameterSet PUBLIC ${PYTHON_INCLUDE_DIR})
+include_directories(testPythonParameterSet PUBLIC ${PYTHON_INCLUDE_DIR})
 target_include_directories(testPythonParameterSet PUBLIC ${MD5_INCLUDE_DIR})
+include_directories(testPythonParameterSet PUBLIC ${MD5_INCLUDE_DIR})
 target_include_directories(testPythonParameterSet PUBLIC ${Boost_INCLUDE_DIR}/python)
+include_directories(testPythonParameterSet PUBLIC ${Boost_INCLUDE_DIR}/python)
 target_include_directories(testPythonParameterSet PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(testPythonParameterSet PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(testPythonParameterSet PUBLIC ${TBB_INCLUDE_DIRS})
+include_directories(testPythonParameterSet PUBLIC ${TBB_INCLUDE_DIRS})
 target_include_directories(testPythonParameterSet PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(testPythonParameterSet PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(testPythonParameterSet PUBLIC
   ${Boost_REGEX_LIBRARY_RELEASE}
   dl
@@ -29,5 +36,4 @@ target_link_libraries(testPythonParameterSet PUBLIC
   ${PYTHON_LIBRARY}
 )
 
-install( TARGETS testPythonParameterSet EXPORT testPythonParameterSet DESTINATION  bin )
-
+add_test(NAME testPythonParameterSet COMMAND testPythonParameterSet)
