--- a/FWCore/Services/CMakeLists.txt
+++ b/FWCore/Services/CMakeLists.txt
@@ -1,3 +1,5 @@
+include_directories(${CMAKE_SOURCE_DIR})
+include_directories(/usr/include/)
 add_subdirectory(bin)
 if(BUILDTEST)
 add_subdirectory(test)
@@ -9,28 +11,35 @@ add_library(FWCoreServices SHARED
 )
 
 target_include_directories(FWCoreServices PUBLIC ${PYTHON_INCLUDE_DIR})
+include_directories(FWCoreServices PUBLIC ${PYTHON_INCLUDE_DIR})
 target_include_directories(FWCoreServices PUBLIC ${Boost_INCLUDE_DIR}/python)
+include_directories(FWCoreServices PUBLIC ${Boost_INCLUDE_DIR}/python)
 target_include_directories(FWCoreServices PUBLIC ${TINYXML_INCLUDE_DIR})
+include_directories(FWCoreServices PUBLIC ${TINYXML_INCLUDE_DIR})
 target_include_directories(FWCoreServices PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(FWCoreServices PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(FWCoreServices PUBLIC ${MD5_INCLUDE_DIR})
+include_directories(FWCoreServices PUBLIC ${MD5_INCLUDE_DIR})
 target_include_directories(FWCoreServices PUBLIC ${TBB_INCLUDE_DIRS})
+include_directories(FWCoreServices PUBLIC ${TBB_INCLUDE_DIRS})
 target_include_directories(FWCoreServices PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(FWCoreServices PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(FWCoreServices PUBLIC
-  ${Boost_REGEX_LIBRARY_RELEASE}
-  dl
-  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
-  Thread
   FWCoreParameterSet
-  Tree
-  FWCoreMessageLogger
-  FWCoreFramework
+  dl
+  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
+  Thread
+  ${Boost_REGEX_LIBRARY_RELEASE}
   xerces-c
+  DataFormatsCommon
+  FWCoreFramework
+  Tree
   Hist
   ${Boost_THREAD_LIBRARY_RELEASE}
   MathCore
   ${Boost_SYSTEM_LIBRARY_RELEASE}
   FWCoreServiceRegistry
-  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
+  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
   Net
   ${Boost_PYTHON_LIBRARY_RELEASE}
   DataFormatsProvenance
@@ -44,7 +53,7 @@ target_link_libraries(FWCoreServices PUBLIC
   DataFormatsStreamer
   FWCoreConcurrency
   FWCorePluginManager
-  DataFormatsCommon
+  FWCoreMessageLogger
 )
 
 install( TARGETS FWCoreServices EXPORT FWCoreServices DESTINATION  lib )
