--- a/FWCore/Utilities/bin/CMakeLists.txt
+++ b/FWCore/Utilities/bin/CMakeLists.txt
@@ -2,10 +2,14 @@ add_executable(edmToFriendlyClassName
   edmToFriendlyClassName.cc
 )
 
-target_include_directories(edmToFriendlyClassName PUBLIC ${Boost_INCLUDE_DIR})
-target_include_directories(edmToFriendlyClassName PUBLIC ${TBB_INCLUDE_DIRS})
 target_include_directories(edmToFriendlyClassName PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(edmToFriendlyClassName PUBLIC ${ROOT_INCLUDE_DIR})
+target_include_directories(edmToFriendlyClassName PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(edmToFriendlyClassName PUBLIC ${Boost_INCLUDE_DIR})
+target_include_directories(edmToFriendlyClassName PUBLIC ${TBB_INCLUDE_DIRS})
+include_directories(edmToFriendlyClassName PUBLIC ${TBB_INCLUDE_DIRS})
 target_include_directories(edmToFriendlyClassName PUBLIC ${MD5_INCLUDE_DIR})
+include_directories(edmToFriendlyClassName PUBLIC ${MD5_INCLUDE_DIR})
 target_link_libraries(edmToFriendlyClassName PUBLIC
   FWCoreUtilities
 )
