--- a/FWCore/Version/CMakeLists.txt
+++ b/FWCore/Version/CMakeLists.txt
@@ -1,3 +1,5 @@
+include_directories(${CMAKE_SOURCE_DIR})
+include_directories(/usr/include/)
 add_library(FWCoreVersion SHARED 
   src/GetReleaseVersion.cc
   src/GetFileFormatVersion.cc
