--- a/IOPool/Common/bin/CMakeLists.txt
+++ b/IOPool/Common/bin/CMakeLists.txt
@@ -3,12 +3,19 @@ add_executable(edmProvDump
 )
 
 target_include_directories(edmProvDump PUBLIC ${PYTHON_INCLUDE_DIR})
+include_directories(edmProvDump PUBLIC ${PYTHON_INCLUDE_DIR})
 target_include_directories(edmProvDump PUBLIC ${MD5_INCLUDE_DIR})
+include_directories(edmProvDump PUBLIC ${MD5_INCLUDE_DIR})
 target_include_directories(edmProvDump PUBLIC ${Boost_INCLUDE_DIR}/python)
+include_directories(edmProvDump PUBLIC ${Boost_INCLUDE_DIR}/python)
 target_include_directories(edmProvDump PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(edmProvDump PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(edmProvDump PUBLIC ${TBB_INCLUDE_DIRS})
+include_directories(edmProvDump PUBLIC ${TBB_INCLUDE_DIRS})
 target_include_directories(edmProvDump PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(edmProvDump PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(edmProvDump PUBLIC
+  FWCoreServiceRegistry
   Core
   Thread
   FWCoreParameterSet
@@ -19,12 +26,11 @@ target_link_libraries(edmProvDump PUBLIC
   RIO
   MathCore
   FWCoreCatalog
-  IOPoolCommon
   DataFormatsStdDictionaries
   Net
   DataFormatsWrappedStdDictionaries
   DataFormatsProvenance
-  FWCoreServiceRegistry
+  IOPoolCommon
 )
 
 install( TARGETS edmProvDump EXPORT edmProvDump DESTINATION  bin )
@@ -35,20 +41,23 @@ add_executable(edmFileUtil
 )
 
 target_include_directories(edmFileUtil PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(edmFileUtil PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(edmFileUtil PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(edmFileUtil PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(edmFileUtil PUBLIC
-  ${Boost_REGEX_LIBRARY_RELEASE}
-  dl
-  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
-  Thread
   FWCoreParameterSet
+  dl
+  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
+  Thread
+  ${Boost_REGEX_LIBRARY_RELEASE}
   Tree
   Hist
   ${Boost_THREAD_LIBRARY_RELEASE}
   MathCore
-  ${Boost_SYSTEM_LIBRARY_RELEASE}
+  FWCoreCatalog
   FWCoreServiceRegistry
-  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
+  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
+  FWCorePluginManager
   Net
   ${PYTHON_LIBRARY}
   DataFormatsProvenance
@@ -60,8 +69,7 @@ target_link_libraries(edmFileUtil PUBLIC
   ${Boost_PYTHON_LIBRARY_RELEASE}
   RIO
   IOPoolCommon
-  FWCorePluginManager
-  FWCoreCatalog
+  ${Boost_SYSTEM_LIBRARY_RELEASE}
 )
 
 install( TARGETS edmFileUtil EXPORT edmFileUtil DESTINATION  bin )
@@ -71,6 +79,7 @@ add_executable(edmCopyUtil
 )
 
 target_include_directories(edmCopyUtil PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(edmCopyUtil PUBLIC ${Boost_INCLUDE_DIR})
 target_link_libraries(edmCopyUtil PUBLIC
   FWCoreParameterSet
   dl
