--- a/IOPool/TFileAdaptor/test/CMakeLists.txt
+++ b/IOPool/TFileAdaptor/test/CMakeLists.txt
@@ -3,19 +3,21 @@ add_executable(test_TFileAdaptor_TFile
 )
 
 target_include_directories(test_TFileAdaptor_TFile PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(test_TFileAdaptor_TFile PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(test_TFileAdaptor_TFile PUBLIC ${TBB_INCLUDE_DIRS})
+include_directories(test_TFileAdaptor_TFile PUBLIC ${TBB_INCLUDE_DIRS})
 target_include_directories(test_TFileAdaptor_TFile PUBLIC ${ROOT_INCLUDE_DIR})
+include_directories(test_TFileAdaptor_TFile PUBLIC ${ROOT_INCLUDE_DIR})
 target_link_libraries(test_TFileAdaptor_TFile PUBLIC
   Core
-  Thread
-  Tree
-  RIO
   MathCore
-  FWCorePluginManager
+  Thread
+  RIO
   UtilitiesStorageFactory
   IOPoolTFileAdaptor
   Net
+  Tree
+  FWCorePluginManager
 )
 
-install( TARGETS test_TFileAdaptor_TFile EXPORT test_TFileAdaptor_TFile DESTINATION  bin )
-
+add_test(NAME test_TFileAdaptor_TFile COMMAND test_TFileAdaptor_TFile)
