--- a/Utilities/General/CMakeLists.txt
+++ b/Utilities/General/CMakeLists.txt
@@ -1,3 +1,5 @@
+include_directories(${CMAKE_SOURCE_DIR})
+include_directories(/usr/include/)
 if(BUILDTEST)
 add_subdirectory(test)
 endif()
@@ -8,18 +10,19 @@ add_library(UtilitiesGeneral SHARED
 )
 
 target_include_directories(UtilitiesGeneral PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(UtilitiesGeneral PUBLIC ${Boost_INCLUDE_DIR})
 target_link_libraries(UtilitiesGeneral PUBLIC
   ${Boost_REGEX_LIBRARY_RELEASE}
   dl
   ${Boost_IOSTREAMS_LIBRARY_RELEASE}
   ${Boost_SERIALIZATION_LIBRARY_RELEASE}
-  ${PYTHON_LIBRARY}
-  ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
   FWCoreUtilities
+  ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
+  ${Boost_PYTHON_LIBRARY_RELEASE}
   ${Boost_THREAD_LIBRARY_RELEASE}
   ${Boost_SYSTEM_LIBRARY_RELEASE}
   ${Boost_FILESYSTEM_LIBRARY_RELEASE}
-  ${Boost_PYTHON_LIBRARY_RELEASE}
+  ${PYTHON_LIBRARY}
 )
 
 install( TARGETS UtilitiesGeneral EXPORT UtilitiesGeneral DESTINATION  lib )
