--- a/Utilities/RFIOAdaptor/CMakeLists.txt
+++ b/Utilities/RFIOAdaptor/CMakeLists.txt
@@ -1,3 +1,5 @@
+include_directories(${CMAKE_SOURCE_DIR})
+include_directories(/usr/include/)
 add_subdirectory(plugins)
 add_library(UtilitiesRFIOAdaptor SHARED 
   src/RFIOFile.cc
