--- a/Utilities/StorageFactory/CMakeLists.txt
+++ b/Utilities/StorageFactory/CMakeLists.txt
@@ -1,3 +1,5 @@
+include_directories(${CMAKE_SOURCE_DIR})
+include_directories(/usr/include/)
 add_subdirectory(bin)
 if(BUILDTEST)
 add_subdirectory(test)
@@ -24,7 +26,9 @@ add_library(UtilitiesStorageFactory SHARED
 )
 
 target_include_directories(UtilitiesStorageFactory PUBLIC ${Boost_INCLUDE_DIR})
+include_directories(UtilitiesStorageFactory PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(UtilitiesStorageFactory PUBLIC ${TBB_INCLUDE_DIRS})
+include_directories(UtilitiesStorageFactory PUBLIC ${TBB_INCLUDE_DIRS})
 target_compile_options(UtilitiesStorageFactory PUBLIC -D_FILE_OFFSET_BITS=64)
 target_link_libraries(UtilitiesStorageFactory PUBLIC
   ${Boost_REGEX_LIBRARY_RELEASE}
